Fix styles for FF and Safari. Need to test on IE

--- a/2048/assets/css/index.scss
+++ b/2048/assets/css/index.scss
@@ -8,6 +8,7 @@
   background-color: rgba(255,255,255,0.7);
   height: 100%;
   display: flex;
+  display: -ms-flexbox;
   align-items: center;
   justify-content: center;
 }
@@ -18,10 +19,15 @@
   width: 500px;
   height: 500px;
   display: flex;
+  display: -ms-flexbox;
   align-items: center;
   justify-content: center;
   background: rgba(255,255,255,0.5);
   border-radius: 60px;
+}
+
+.game-container {
+  position: relative;
 }
 
 .header {
@@ -66,6 +72,7 @@ h2 {
 
 .sub-title {
   display: flex;
+  display: -ms-flexbox;
   justify-content: space-around;
   align-items: center;
   position: relative;
@@ -123,7 +130,9 @@ h2 {
 .round-points {
   width: 100%;
   position: absolute;
-  top: 40px;
+  top: -40px;
+  left: 0;
+  z-index: 1;
 }
 
 .points-bubble {
@@ -136,6 +145,7 @@ h2 {
   margin: auto;
   opacity: 0;
   display: flex;
+  display: -ms-flexbox;
   justify-content: center;
   align-items: center;
 }
@@ -153,6 +163,7 @@ h2 {
   background: rgba(255, 255, 255, 0.9);
   border-radius: 20px;
   display: flex;
+  display: -ms-flexbox;
   justify-content: center;
   align-items: center;
   flex-direction: column;
